--- a/public/css/style.css
+++ b/public/css/style.css
@@ -16,3 +16,11 @@ a:link, a:visited {
 }
 .clear{
 	clear:both;}
+
+
+.pic-list{
+	overflow: hidden;
+}
+.pic-list>li{
+	float:left;width:150px;border:1px solid #ccc;padding:3px;list-style:none;margin:5px;
+}
